Phase 2 Complete: Screenshot-based manual entry system with sales and listing extraction
✅ Phase 2 Deliverables:
- Enhanced admin endpoints for manual metrics entry
- Admin panel UI for manual data entry
- Screenshot upload system with AI-assisted extraction
- Individual sales extraction from screenshots
- Listing data extraction from screenshots
- Automatic metrics calculations (EMA, liquidity score, etc.)
- Recent metrics endpoint
- Test scripts for sales and listing extraction

📦 New Features:
- Screenshot upload endpoint with processing sessions
- Sales extraction (individual and bulk)
- Listing extraction with price/quantity data
- Admin panel with multiple tabs (Manual Entry, Screenshot Upload, Bulk Entry)
- Auto-calculation of derived metrics on save

🔧 Technical Updates:
- Added python-multipart for file uploads
- Fixed database schema compatibility issues
- Added comprehensive error handling
- Created diagnostic and test scripts

📊 Tested & Verified:
- Sales extraction working (13 sales saved successfully)
- Listing extraction fixed and ready
- Database verification passing
- All endpoints functional

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@
 # Web Framework
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6  # Required for file uploads (Form data)
 
 # Database & ORM
 sqlalchemy[asyncio]>=2.0.0
@@ -24,6 +25,7 @@ pendulum>=3.0.0  # Better datetime handling
 # Data Processing (for future phases)
 pandas>=2.0.0
 numpy>=1.24.0
+openpyxl>=3.1.0  # Excel file support for pandas
 
 # HTTP Client (for testing and future API integrations)
 httpx>=0.25.0
