Phase 6 Complete: Rankings & Caching System
✅ Phase 6 Deliverables:
- Rank fields added to database (current_rank, previous_rank, rank_change)
- Ranking calculation service with rank change detection
- Redis cache service with graceful fallback
- Cache integration in leaderboard service
- Backfill script for historical ranks
- Test script for Redis cache and rankings

📦 New Services:
- app/services/ranking_calculator.py - Rank calculations
- app/services/cache_service.py - Redis caching
- scripts/backfill_ranks.py - Historical rank backfill
- scripts/test_redis_cache.py - Cache and ranking tests

🔧 Database Changes:
- Migration 003: Added rank fields to box_metrics_unified
- Index on (metric_date, current_rank) for leaderboard queries

📊 Configuration:
- Redis connection settings in app/config.py
- Configurable cache TTLs (leaderboard: 15min, detail: 10min)
- Redis added to requirements.txt

🧪 Testing:
- Comprehensive test script for cache operations
- Performance benchmarking
- Connection verification

📝 Documentation:
- Progress Documents/PHASE_6_COMPLETE.md
- Progress Documents/PHASE_6_PROGRESS.md
- Progress Documents/PHASE_5_COMPLETE.md
- Progress Documents/CURRENT_STATUS_AND_NEXT_STEPS.md

🔧 Configuration:
- Updated .gitignore to exclude .md files (except README.md)

Next: Phase 7 (API Layer completion)

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,9 @@ openpyxl>=3.1.0  # Excel file support for pandas
 # HTTP Client (for testing and future API integrations)
 httpx>=0.25.0
 
+# Caching (Phase 6)
+redis>=5.0.0  # Redis client for caching
+
 # Testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
