--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ psycopg2-binary>=2.9.0  # PostgreSQL sync driver (required for Alembic)
 
 # Validation & Serialization
 pydantic>=2.0.0
+pydantic[email]>=2.0.0  # Email validation support
 pydantic-settings>=2.0.0  # For settings management
 
 # Environment & Configuration
@@ -37,6 +38,14 @@ redis>=5.0.0  # Redis client for caching
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
+
+# Authentication & Security (Phase 8)
+passlib[bcrypt]>=1.7.4  # Password hashing
+bcrypt<5.0  # bcrypt 5.0+ is incompatible with passlib 1.7.4
+python-jose[cryptography]>=3.3.0  # JWT tokens
+
+# Payment Processing (Phase 8)
+stripe>=7.0.0  # Stripe SDK
 
 # Development Tools
 black>=23.0.0  # Code formatter
