Fix authentication flow: Add CORS configuration, database schema fixes, and user registration
- Fixed CORS configuration to allow all origins in development mode
- Added global exception handler to ensure CORS headers in error responses
- Fixed users table schema to include all required columns (hashed_password, password_hash, is_active, is_superuser)
- Updated auth registration to set both hashed_password and password_hash for Supabase compatibility
- Added login/signup modals to replace separate pages
- Integrated auth modals with navigation
- Fixed migration chain (migration 003 now references 001 instead of missing 002)
- Updated .env to use Supabase Session Pooler connection string (IPv4 compatible)
- Added Stripe payment integration router
- Added comprehensive error handling and debugging to signup modal

--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,13 @@ pytest>=7.4.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
 
+# Payment Processing
+stripe>=7.0.0
+
+# Authentication & Security
+bcrypt>=4.0.0
+python-jose[cryptography]>=3.3.0
+
 # Development Tools
 black>=23.0.0  # Code formatter
 ruff>=0.1.0  # Fast linter
