--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -49,7 +49,7 @@
   
   "web_accessible_resources": [
     {
-      "resources": ["icons/*"],
+      "resources": ["icons/*", "icons/logo.png"],
       "matches": ["https://*.tcgplayer.com/*", "https://*.ebay.com/*"]
     }
   ]
