--- a/requirements.txt
+++ b/requirements.txt
@@ -50,3 +50,4 @@ Pillow>=10.0.0  # Image validation and processing
 black>=23.0.0  # Code formatter
 ruff>=0.1.0  # Fast linter
 
+apify-client>=2.4.0
