--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 # Web Framework
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6  # Form data / file uploads (required by FastAPI)
 
 # Database & ORM
 sqlalchemy[asyncio]>=2.0.0
