--- a/render.yaml
+++ b/render.yaml
@@ -14,7 +14,7 @@ services:
     name: boosterboxpro-daily-refresh
     runtime: python
     schedule: "0 18 * * *"
-    buildCommand: pip install -r requirements.txt
+    buildCommand: PIP_ROOT_USER_ACTION=ignore pip install -r requirements.txt
     startCommand: python scripts/daily_refresh.py
     envVars:
       - key: DATABASE_URL
