Fix Render startup: email-validator + asyncpg sslmode
- requirements.txt: add email-validator (auth router needs it for EmailStr)
- app/database.py: strip sslmode from URL, pass ssl=True in connect_args so asyncpg accepts SSL to Supabase

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ psycopg2-binary>=2.9.0  # PostgreSQL sync driver (required for Alembic)
 # Validation & Serialization
 pydantic>=2.0.0
 pydantic-settings>=2.0.0  # For settings management
+email-validator>=2.0.0  # Required by pydantic EmailStr (auth router)
 
 # Authentication & Security
 python-jose[cryptography]>=3.3.0
