--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,8 @@ openai>=1.0.0  # OpenAI API - alternative for screenshot extraction
 Pillow>=10.0.0  # Image validation and processing
 
 # Web Scraping
-apify-client>=2.4.0
+# apify-client 2.4+ requires Python 3.10+; pin to 1.x for Python 3.9 (e.g. Render cron)
+apify-client>=1.12.0,<2
 playwright
 playwright-stealth
 fake-useragent
