Cache invalidation after daily refresh, boot logo tweaks, cron random delay
- Add POST /admin/invalidate-cache (clears leaderboard, historical, Redis)
- Daily refresh calls invalidate endpoint when BACKEND_URL + INVALIDATE_CACHE_SECRET set
- GitHub workflow: BACKEND_URL, INVALIDATE_CACHE_SECRET; scheduled run uses random 0-30min delay, manual run uses --no-delay
- Box detail: Community Sentiment boot logo tilt -28deg, fixed-height row spacing
- Docs: CRON_GITHUB_ONLY cache invalidation steps; env.example INVALIDATE_CACHE_SECRET

--- a/.github/workflows/daily-refresh.yml
+++ b/.github/workflows/daily-refresh.yml
@@ -42,4 +42,11 @@ jobs:
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           APIFY_API_TOKEN: ${{ secrets.APIFY_API_TOKEN }}
-        run: python scripts/daily_refresh.py --no-delay
+          BACKEND_URL: ${{ secrets.BACKEND_URL }}
+          INVALIDATE_CACHE_SECRET: ${{ secrets.INVALIDATE_CACHE_SECRET }}
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            python scripts/daily_refresh.py --no-delay
+          else
+            python scripts/daily_refresh.py
+          fi
