--- a/Setup Guides/env.example
+++ b/Setup Guides/env.example
@@ -16,6 +16,10 @@ DEBUG=True
 # Admin API Key (for manual entry endpoints - simple auth for now)
 ADMIN_API_KEY=your-secret-api-key-here
 
+# Daily refresh cache invalidation: set same value as GitHub Actions secret INVALIDATE_CACHE_SECRET
+# so when the refresh completes it can call POST /admin/invalidate-cache and leaderboard/box detail update immediately
+# INVALIDATE_CACHE_SECRET=your-invalidate-secret-here
+
 # Future: API Keys for marketplace integrations
 # TCGPLAYER_API_KEY=
 # EBAY_API_KEY=
